[package]
name = "devhub"
version = "0.2.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository = "https://github.com/FroVolod/neardevhub-contract"

[package.metadata.near.reproducible_build]
image = "docker.io/sourcescan/cargo-near:0.6.0"
image_digest = "sha256:bf488476d9c4e49e36862bbdef2c595f88d34a295fd551cc65dc291553849471"
container_build_command = ["cargo", "near", "build", "--no-docker", "--locked", "--no-abi", "--color", "--auto"]
repo_git_url = "https://github.com/near/cargo-near-new-project-template.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "5.0.0"
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
insta = { version = "1.31.0", features = ["json", "redactions"] }
regex = "1"
near-workspaces = { version = "0.10.0", features = ["unstable"], default-features = false  }
tokio = { version = "1.10.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
